--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Thomas using APIs from mapbox.com and weatherstack.com</p>
         <img class="portrait" src="/img/51546.jpg">
     </div>
     
